# CppGame

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/GameObject/: gameObject.cpp  gameObject.h
src/GameObject/Enemy/: enemy.cpp  enemy.h
src/GameObject/Platform/: platform.cpp  platform.h
src/GameObject/Player/: player.cpp  player.h
src/Scene/: scene.cpp  scene.h  sceneMain.cpp  sceneMain.h
src/engine/: resourceManager.cpp  resourceManager.h
